# face-detection-server

./: .gitignore  Cargo.toml  README.md
results/: 3d298ec9-d101-4742-8210-341101d8e63a.json  7c6e51ab-a87f-4d08-b91f-f1d9b1f318a2.json
src/: config.rs  image_queue.rs  lib.rs  main.rs  queue_processor.rs  ultra_predictor.rs
