[package]
name = "face-detection-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4"
actix-multipart = "0.6.1"
actix-files="0.6.2"
mime="0.3.17"
uuid = {version = "1.5.0", features = ["v4", "fast-rng"]}
clippy = "0.0.302"
dotenv = "0.15.0"
image = "0.24.7"
imageproc = "0.23.0"
ndarray = "0.15.6"
ort = { version = "1.15.2", features = [ "load-dynamic" ] }
rayon = "1.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
